[package]
name = "miscutils-find-upwards"
version = "0.1.0"
authors = ["Sean Johnson <sean@maio.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.2"
failure = "0.1.5"

[dependencies.miscutils-core]
path = "../core"
