[package]
name = "miscutils-process-waiter"
version = "0.1.0"
authors = ["Sean Johnson <sean@maio.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.7"
structopt = "0.3.14"
tempfile = "3"
unix-named-pipe = "0.2.0"

[dependencies.miscutils-core]
path = "../core"
