[package]
name = "miscutils-ssl-tester"
version = "0.1.0"
authors = ["Sean Johnson <sean@maio.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.12"
failure = "0.1.7"
openssl = "0.10"

[dependencies.miscutils-core]
path = "../core"

